--- a/projects.html
+++ b/projects.html
@@ -3,13 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="x-icon" href="assets/img/logo2.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P.folio</title>
+    <title>My Projects</title>
     <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/fontawsome/all.min.css">
-    <link rel="stylesheet" href="assets/css/responsiveindex.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/css/projects.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body>
