--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="assets/css/projects.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/contact.css">
+    <link rel="stylesheet" href="assets/css/navbar.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/core.css">
 </head>
 <body>
     <div class="container">
@@ -21,13 +24,13 @@
                 <div>
                     <ul class="navlist">
                         <li class="li">
-                            <a class="nav-link0 active" aria-current="page" href="index.html">Home</a>
+                            <a aria-current="page" href="index.html">Home</a>
                         </li >
                         <li class="li">
-                            <a class="nav-link0" href="projects.html">Projects</a>
+                            <a href="projects.html">Projects</a>
                         </li>
                         <li class="li">
-                            <a class="nav-link0" href="#">Contact me</a>
+                            <a class="active" href="#">Contact me</a>
                         </li>
                     </ul>
                 </div>
@@ -43,7 +46,7 @@
 
         <header>
             <div class="cont conCont  ">
-                <h1 class="personal">Contact Me</h1>
+                <h1 class="personal"><em>Contact Me</em></h1>
             </div>
         </header>
      <section class="myproject">
