--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="vendor/fontawsome/all.min.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/css/projects.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/navbar.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/core.css">
 
 </head>
 
@@ -22,13 +24,13 @@
                 <div>
                     <ul class="navlist">
                         <li class="li">
-                            <a class="nav-link0 active" aria-current="page" href="index.html">Home</a>
+                            <a  aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="li">
-                            <a class="nav-link0" href="#">Projects</a>
+                            <a class="active" href="#">Projects</a>
                         </li>
                         <li class="li">
-                            <a class="nav-link0" href="contact.html">Contact me</a>
+                            <a href="contact.html">Contact me</a>
                         </li>
                     </ul>
                 </div>
@@ -42,15 +44,16 @@
 
         <header>
             <div class="cont proCont  ">
-                    <h1 class="personal">My Projects</h1>
+                    <h1 class="personal"><em>My Projects</em></h1>
+                    </div>
         </header>
      <section class="myproject">
       
         <div class="subContsection">
             <h2 class="projectsectiontitle"><strong>My projects</strong></h2>
             
-          <div class=" mt-5 projectCont">
-            <div class="col-lg-5 ">
+          <div class=" mt-5 projectCont1">
+            <div class="col-lg-5 sourceImg">
                 <div class="card" ">
                     <img src="assets/img/pizza.PNG" class="card-img-top" alt="student exchange">
                     <div class="card-body">
@@ -65,15 +68,17 @@
                 <img src="assets/img/pizza1.PNG" class="subImg subImg1" alt="pizza"/>
                 <img src="assets/img/pizza2.PNG" class="subImg subImg2" alt="pizza"/>
                 <img src="assets/img/pizza3.PNG" class="subImg subImg3" alt="pizza"/>
+                <figcaption class="figcaption">Figure 1: Screenshots of the pizza shop project</figcaption>
               </div>   
           </div>
-            <div class=" mt-5 projectCont">
+            <div class=" mt-5 projectCont2">
                 <div class="col-lg-6 imgGroup">
                     <img src="assets/img/port1.PNG" class="subImg subImg1" alt="portfolio"/>
                     <img src="assets/img/port2.PNG" class="subImg subImg2" alt="portfolio"/>
                     <img src="assets/img/port3.PNG" class="subImg subImg3" alt="portfolio"/>
+                    <figcaption class="figcaption">Figure 2: Screenshots of the Portfolio project </figcaption>
                   </div>   
-                  <div class="col-lg-5 ">
+                  <div class="col-lg-5 sourceImg">
                     <div class="card">
                         <img src="assets/img/port.PNG" class="card-img-top" alt="student exchange">
                         <div class="card-body">
@@ -85,8 +90,8 @@
                       </div>
                   </div>
               </div>
-        <div class=" mt-5 projectCont">
-          <div class="col-lg-5 ">
+        <div class=" mt-5 projectCont1">
+          <div class="col-lg-5 sourceImg">
             <div class="card" >
                 <img src="assets/img/studentExchange.PNG" class="card-img-top" alt="student exchange">
                 <div class="card-body">
@@ -102,16 +107,19 @@
             <img src="assets/img/subStudentExchange1.PNG" class="subImg subImg1" alt="exchangeprojects"/>
             <img src="assets/img/subStudentExchange2.PNG" class="subImg subImg2" alt="exchangeprojects"/>
             <img src="assets/img/subStudentExchange3.PNG" class="subImg subImg3" alt="exchangeprojects"/>
+            <figcaption class="figcaption">Figure 3: Screenshots of the Student Exchange project</figcaption>
           </div>
         </div>
 
-        <div class=" mt-5 pb-5 projectCont">
+        <div class=" mt-5 pb-5 projectCont2">
             <div class="col-lg-6 imgGroup">
                 <img src="assets/img/Tshope1.PNG" class="subImg subImg1" alt="T-shope"/>
                 <img src="assets/img/Tshope2.PNG" class="subImg subImg2" alt="T-shope"/>
                 <img src="assets/img/Tshope3.PNG" class="subImg subImg3" alt="T-shope"/>
+                <figcaption class="figcaption">Figure 4: Screenshots of the T-shope project </figcaption>
+
               </div>
-            <div class="col-lg-5 ">
+            <div class="col-lg-5 sourceImg">
               <div class="card">
                   <img src="assets/img/Tshope.PNG" class="card-img-top" alt="student exchange">
                   <div class="card-body">
